    - Swap the bar for fake filters
    - Support copy pasting onto requesting chests
    - Fix requesting already present buildings/modules
    - Allow quality factories and force exports to fit
    - Fix copy paste crash when source is unconfigured
    - Disable fluid support pending implementation concerns
    - Cache statistics
    - Require factory planner version with quality buttons
---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 2025. 06. 12
  Info:
    - Get stuck trying to connect fluidboxes from everywhere
    - chatgtp my ass
    - Get the fluid positions code to behave
    - Allow pipe to grounds to be placed against the factory
    - Add a compound entity for the fluidboxes
    - Simplify localization
    - Route factory index changes through Buildings.set_factory_index
    - Fix building held factory over existing factory
    - Bug squashing
    - Prepare the triggers for ingredients & done
    - Run the minute crafter only when fulfilled
    - Fire a lua event each time the recipe completes
    - Setup the working & waiting toggle detection
    - Update the status text on the factory
    - Hide container contents from alt mode
    - Create an insert plan for the buildings and modules
    - Show the slot requirement/availability during exporting
    - Eject items when filter/bar no longer allows that slot
    - Fix copy paste getting the order wrong
    - Block triggers from changing status of inactive factory
    - Consume power whilst crafting
    - Start writing the crafting logic
    - Detect when not all of the output was removed yet
    - Reach bare minimum state
---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: 2025. 06. 10
  Info:
    - Calculate the amount of slots needed and filter them
    - Set the bar too, and skip the crashing ghosts
    - Setup the initial hidden surface